--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,6 @@ on:
     paths-ignore:
       - README.md
       - .gitignore
-  release:
-    types: [published]
 
 env:
   REGISTRY: ghcr.io
@@ -32,15 +30,60 @@ jobs:
         run: dotnet test
         working-directory: ${{ env.WORKING_DIRECTORY_PATH }}
 
-  build:
+  version:
+    runs-on: ubuntu-latest
     needs:
       - test
+    permissions:
+      contents: write
+    outputs:
+      version_resolved: ${{ steps.resolve_version.outputs.version_resolved }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+
+      - name: Tag and use it as version
+        if: github.ref == 'refs/heads/main'
+        uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42 # 1.61.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG_CONTEXT: branch
+          PRERELEASE: ${{ github.ref != 'refs/heads/main' }}
+
+      - uses: actions-ecosystem/action-get-latest-tag@b7c32daec3395a9616f88548363a42652b22d435 # v1.6.0
+        id: version_latest_tag
+        if: github.ref == 'refs/heads/main'
+
+      - name: Use branch name as version
+        if: github.ref != 'refs/heads/main'
+        id: version_branch_name
+        run: |
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          echo "Branch name: $BRANCH_NAME"
+          echo "branch_name=${BRANCH_NAME//\//_}" >> $GITHUB_OUTPUT
+      
+      - name: Output resolved version
+        id: resolve_version
+        run: |
+          if [ -n "${{ steps.version_latest_tag.outputs.tag }}" ]; then
+            echo "version_resolved=${{ steps.version_latest_tag.outputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "version_resolved=${{ steps.version_branch_name.outputs.branch_name }}" >> $GITHUB_OUTPUT
+          fi
+
+  build:
+    needs:
+      - version
     permissions:
       packages: write
       contents: read
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+      - env:
+          RESOLVED_VERSION: ${{needs.version.outputs.version_resolved}}
+
       - uses: actions/checkout@v3
       - name: Get Tag Name
         if: startsWith(github.ref, 'refs/tags/')
@@ -77,10 +120,9 @@ jobs:
           push: true
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_tag_name.outputs.tag_name }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RESOLVED_VERSION }}
 
       - name: Build and push 'latest' tag
-        if: github.event_name == 'release'
         uses: docker/build-push-action@v3
         with:
           context: ${{ env.DOCKER_BUILD_CONTEXT }}
@@ -89,5 +131,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          working-directory: ${{ env.WORKING_DIRECTORY_PATH }}
     
