--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,9 +81,6 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - env:
-          RESOLVED_VERSION: ${{needs.version.outputs.version_resolved}}
-
       - uses: actions/checkout@v3
       - name: Get Tag Name
         if: startsWith(github.ref, 'refs/tags/')
@@ -113,6 +110,8 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push image tag ${{ steps.get_tag_name.outputs.tag_name }}
+        env:
+          RESOLVED_VERSION: ${{needs.version.outputs.version_resolved}}
         uses: docker/build-push-action@v3
         with:
           context: ${{ env.DOCKER_BUILD_CONTEXT }}
