--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,17 +79,8 @@ jobs:
       packages: write
       contents: read
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v3
-      - name: Get Tag Name
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
-          echo "Tag Name: $TAG_NAME"
-          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-        id: get_tag_name
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       
@@ -109,7 +100,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push image tag ${{ steps.get_tag_name.outputs.tag_name }}
+      - name: Build and push image tag ${{ needs.version.outputs.version_resolved }}
         env:
           RESOLVED_VERSION: ${{needs.version.outputs.version_resolved}}
         uses: docker/build-push-action@v3
