--- a/src/flamflam.SubmissionService/appsettings.json
+++ b/src/flamflam.SubmissionService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FlamFlamDb": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "flam",
+    "SubmissionsCollectionName": "submissions"
+  }
 }
